--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,144 @@
+# HAVEN Crowdfunding Platform - Complete Frontend Requirements
+# Streamlit frontend with translation and OAuth integration
+
+# Core Streamlit and web framework
 streamlit==1.36.0
+streamlit-authenticator==0.3.2
+streamlit-option-menu==0.3.13
+
+# HTTP requests and API integration
 requests==2.32.3
+httpx==0.27.0
+
+# Data processing and visualization
+pandas==2.2.2
+numpy==1.26.4
+plotly==5.17.0
+altair==5.3.0
+
+# Authentication and security
 PyJWT==2.8.0
+cryptography==42.0.8
+python-jose[cryptography]==3.3.0
+
+# OAuth integration
+google-auth-oauthlib==1.2.0
+google-auth==2.29.0
+oauthlib==3.2.2
+
+# Text processing and translation support
+nltk==3.8.1
+textstat==0.7.3
+
+# Language detection and processing
+langdetect==1.0.9
+polyglot==16.7.4
+
+# Date and time handling
+python-dateutil==2.9.0
+pytz==2024.1
+
+# Environment and configuration
+python-dotenv==1.0.1
+pydantic==2.7.4
+pydantic-settings==2.3.4
+
+# File processing
+python-multipart==0.0.9
+openpyxl==3.1.5
+
+# Image processing
+Pillow==10.4.0
+
+# Additional Streamlit components
+streamlit-aggrid==1.0.5
+streamlit-elements==0.1.0
+streamlit-plotly-events==0.0.6
+streamlit-camera-input-live==0.2.0
+
+# Charts and visualization
+matplotlib==3.8.4
+seaborn==0.13.2
+
+# Progress bars and UI enhancements
+tqdm==4.66.4
+rich==13.7.1
+
+# Async support
+asyncio-mqtt==0.16.2
+aiofiles==23.2.1
+
+# JSON handling
+orjson==3.10.5
+
+# URL parsing and handling
+urllib3==2.2.2
+
+# Session management
+streamlit-session-state==0.1.0
+
+# Additional utilities
+validators==0.28.3
+emoji==2.12.1
+
+# Performance monitoring
+psutil==6.0.0
+
+# Development and testing
+pytest==8.2.2
+pytest-asyncio==0.23.7
+
+# Caching and performance
+redis==5.0.7
+diskcache==5.6.3
+
+# Additional data formats
+PyYAML==6.0.1
+toml==0.10.2
+
+# Web scraping (if needed)
+beautifulsoup4==4.12.3
+
+# Additional security
+bleach==6.1.0
+
+# Streamlit extras
+streamlit-extras==0.4.3
+streamlit-lottie==0.0.5
+streamlit-card==1.0.2
+
+# Color and styling
+colorcet==3.1.0
+
+# Additional authentication providers
+streamlit-google-auth==0.1.0
+streamlit-oauth==0.1.0
+
+# Performance optimization
+streamlit-fast-cache==0.1.0
+
+# Additional UI components
+streamlit-toggle-switch==1.0.2
+streamlit-star-rating==0.1.0
+streamlit-feedback==0.1.3
+
+# Internationalization
+babel==2.15.0
+gettext==4.1
+
+# Additional data visualization
+bokeh==3.4.1
+pygments==2.18.0
+
+# File upload handling
+streamlit-file-browser==0.2.0
+
+# Additional utilities for enhanced functionality
+streamlit-autorefresh==1.0.1
+streamlit-modal==0.1.2
+streamlit-ace==0.1.1
+
+# Note: Some packages may have version conflicts
+# Test thoroughly and adjust versions as needed
+# Remove duplicates and resolve conflicts during installation
+
