--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # HAVEN Crowdfunding Platform - Complete Frontend Requirements
 # Streamlit frontend with translation and OAuth integration
+# Updated for Render Python3 Runtime
 
 # Core Streamlit and web framework
 streamlit==1.36.0
@@ -68,77 +69,52 @@ rich==13.7.1
 asyncio-mqtt==0.16.2
 aiofiles==23.2.1
 
-# JSON handling
-orjson==3.10.5
+# NEW: Translation and Simplification Dependencies
+transformers==4.36.0
+torch==2.1.0
+sentencepiece==0.1.99
+sacremoses==0.1.1
 
-# URL parsing and handling
-urllib3==2.2.2
+# NEW: Additional NLP and text processing
+spacy==3.7.2
+textblob==0.17.1
 
-# Session management
-streamlit-session-state==0.1.0
+# NEW: Performance and caching
+cachetools==5.3.2
+redis==5.0.1
 
-# Additional utilities
-validators==0.28.3
-emoji==2.12.1
+# NEW: Enhanced UI components
+streamlit-lottie==0.0.5
+streamlit-card==0.0.61
 
-# Performance monitoring
-psutil==6.0.0
+# NEW: Data validation and serialization
+marshmallow==3.20.1
+jsonschema==4.19.2
 
-# Development and testing
-pytest==8.2.2
-pytest-asyncio==0.23.7
+# NEW: Monitoring and logging
+loguru==0.7.2
+sentry-sdk==1.38.0
 
-# Caching and performance
-redis==5.0.7
-diskcache==5.6.3
+# NEW: Additional utilities
+python-slugify==8.0.1
+validators==0.22.0
+phonenumbers==8.13.25
+
+# Development and testing (optional)
+pytest==7.4.3
+pytest-asyncio==0.21.1
+black==23.11.0
+flake8==6.1.0
+
+# Security enhancements
+bcrypt==4.1.2
+passlib==1.7.4
 
 # Additional data formats
-PyYAML==6.0.1
+pyyaml==6.0.1
 toml==0.10.2
 
-# Web scraping (if needed)
-beautifulsoup4==4.12.3
-
-# Additional security
-bleach==6.1.0
-
-# Streamlit extras
-streamlit-extras==0.4.3
-streamlit-lottie==0.0.5
-streamlit-card==1.0.2
-
-# Color and styling
-colorcet==3.1.0
-
-# Additional authentication providers
-streamlit-google-auth==0.1.0
-streamlit-oauth==0.1.0
-
-# Performance optimization
-streamlit-fast-cache==0.1.0
-
-# Additional UI components
-streamlit-toggle-switch==1.0.2
-streamlit-star-rating==0.1.0
-streamlit-feedback==0.1.3
-
-# Internationalization
-babel==2.15.0
-gettext==4.1
-
-# Additional data visualization
-bokeh==3.4.1
-pygments==2.18.0
-
-# File upload handling
-streamlit-file-browser==0.2.0
-
-# Additional utilities for enhanced functionality
-streamlit-autorefresh==1.0.1
-streamlit-modal==0.1.2
-streamlit-ace==0.1.1
-
-# Note: Some packages may have version conflicts
-# Test thoroughly and adjust versions as needed
-# Remove duplicates and resolve conflicts during installation
+# Performance monitoring
+psutil==5.9.6
+memory-profiler==0.61.0
 
