--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,36 @@
-# HAVEN Crowdfunding Platform - Complete Frontend Requirements
-# Streamlit frontend with translation and OAuth integration
-# Updated for Render Python3 Runtime
+# HAVEN Crowdfunding Platform - Minimal Emergency Requirements
+# For quick deployment when having dependency conflicts
 
-# Core Streamlit and web framework
-streamlit==1.36.0
-streamlit-authenticator==0.3.2
-streamlit-option-menu==0.3.13
+# Core Streamlit only
+streamlit==1.35.0
 
-# HTTP requests and API integration
-requests==2.32.3
-httpx==0.27.0
+# Essential packages only
+requests==2.31.0
+pandas==2.1.4
+numpy==1.24.4
 
-# Data processing and visualization
-pandas==2.2.2
-numpy==1.26.4
-plotly==5.17.0
-altair==5.3.0
+# Environment variables
+python-dotenv==1.0.0
 
-# Authentication and security
+# Basic authentication
 PyJWT==2.8.0
-cryptography==42.0.8
-python-jose[cryptography]==3.3.0
 
-# OAuth integration
-google-auth-oauthlib==1.2.0
-google-auth==2.29.0
+# OAuth (essential only)
+google-auth==2.23.0
 oauthlib==3.2.2
 
-# Text processing and translation support
+# Text processing (minimal)
 nltk==3.8.1
-textstat==0.7.3
 
-# Language detection and processing
-langdetect==1.0.9
-polyglot==16.7.4
+# Date handling
+python-dateutil==2.8.2
 
-# Date and time handling
-python-dateutil==2.9.0
-pytz==2024.1
+# Basic visualization
+plotly==5.17.0
 
-# Environment and configuration
-python-dotenv==1.0.1
-pydantic==2.7.4
-pydantic-settings==2.3.4
+# Security
+bcrypt==4.0.1
 
-# File processing
-python-multipart==0.0.9
-openpyxl==3.1.5
-
-# Image processing
-Pillow==10.4.0
-
-# Additional Streamlit components
-streamlit-aggrid==1.0.5
-streamlit-elements==0.1.0
-streamlit-plotly-events==0.0.6
-streamlit-camera-input-live==0.2.0
-
-# Charts and visualization
-matplotlib==3.8.4
-seaborn==0.13.2
-
-# Progress bars and UI enhancements
-tqdm==4.66.4
-rich==13.7.1
-
-# Async support
-asyncio-mqtt==0.16.2
-aiofiles==23.2.1
-
-# NEW: Translation and Simplification Dependencies
-transformers==4.36.0
-torch==2.1.0
-sentencepiece==0.1.99
-sacremoses==0.1.1
-
-# NEW: Additional NLP and text processing
-spacy==3.7.2
-textblob==0.17.1
-
-# NEW: Performance and caching
-cachetools==5.3.2
-redis==5.0.1
-
-# NEW: Enhanced UI components
-streamlit-lottie==0.0.5
-streamlit-card==0.0.61
-
-# NEW: Data validation and serialization
-marshmallow==3.20.1
-jsonschema==4.19.2
-
-# NEW: Monitoring and logging
-loguru==0.7.2
-sentry-sdk==1.38.0
-
-# NEW: Additional utilities
-python-slugify==8.0.1
-validators==0.22.0
-phonenumbers==8.13.25
-
-# Development and testing (optional)
-pytest==7.4.3
-pytest-asyncio==0.21.1
-black==23.11.0
-flake8==6.1.0
-
-# Security enhancements
-bcrypt==4.1.2
-passlib==1.7.4
-
-# Additional data formats
+# File formats
 pyyaml==6.0.1
-toml==0.10.2
-
-# Performance monitoring
-psutil==5.9.6
-memory-profiler==0.61.0
 
