--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 
 # Core Streamlit only
 streamlit==1.35.0
-
+streamlit-authenticator==0.3.2
 # Essential packages only
 requests==2.31.0
 pandas==2.1.4
