--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ streamlit-authenticator==0.3.2
 streamlit-option-menu==0.3.13
 # Essential packages only
 requests==2.31.0
+httpx==0.25.0
 pandas==2.1.4
 numpy==1.24.4
 
