--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ altair==4.2.2
 # Environment variables
 python-dotenv==1.0.0
 pydantic==2.5.0
+pydantic-settings==2.1.0
 # Basic authentication
 PyJWT==2.8.0
 
