--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,32 @@
 streamlit==1.28.1
 requests==2.31.0
 pandas==2.0.3
+numpy==1.24.4
+nltk==3.8.1
+textstat==0.7.3
+beautifulsoup4==4.12.2
+lxml==4.9.3
+python-dotenv==1.0.0
+email-validator==2.1.0
+pyjwt==2.8.0
+cryptography==41.0.8
+typing-extensions==4.8.0
+pydantic==2.5.0
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+jinja2==3.1.2
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+itsdangerous==2.1.2
+aiohttp==3.9.1
+httpx==0.25.2
+openpyxl<=3.1.5
+sqlalchemy==2.0.23
+alembic==1.13.1
+psycopg2-binary==2.9.9
+bcrypt==4.1.2
+anyio==4.2.0
+starlette==0.27.0
+instamojo-wrapper==1.2.0
 
