--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ lxml==4.9.3
 python-dotenv==1.0.0
 email-validator==2.1.0
 pyjwt==2.8.0
-cryptography==41.0.8
+cryptography<=41.0.8
 typing-extensions==4.8.0
 pydantic==2.5.0
 fastapi==0.104.1
@@ -26,7 +26,7 @@ sqlalchemy==2.0.23
 alembic==1.13.1
 psycopg2-binary==2.9.9
 bcrypt==4.1.2
-anyio==4.2.0
+anyio<=4.2.0
 starlette==0.27.0
 instamojo-wrapper==1.2.0
 
