--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,120 @@
+# HAVEN Crowdfunding Platform - Merged Frontend Requirements
+# Compatible with Python 3.11 and Render deployment
+# Streamlit frontend with complete functionality
+
+# Core Streamlit and web framework
 streamlit==1.28.1
+streamlit-authenticator==0.3.2
+streamlit-option-menu==0.3.13
+
+# HTTP requests and API integration
 requests==2.31.0
+httpx==0.25.2
+aiohttp==3.9.1
+
+# Data processing and visualization
 pandas==2.0.3
 numpy==1.24.4
+plotly==5.17.0
+altair==5.1.0
+
+# Authentication and security
+PyJWT==2.8.0
+cryptography<=41.0.8
+python-jose[cryptography]==3.3.0
+bcrypt==4.1.2
+passlib[bcrypt]==1.7.4
+
+# OAuth integration
+google-auth-oauthlib==1.1.0
+google-auth==2.23.0
+oauthlib==3.2.2
+
+# Text processing and NLP
 nltk==3.8.1
 textstat==0.7.3
+langdetect==1.0.9
+textblob==0.17.1
 beautifulsoup4==4.12.2
 lxml==4.9.3
+
+# Date and time handling
+python-dateutil==2.8.2
+pytz==2023.3
+
+# Environment and configuration
 python-dotenv==1.0.0
-email-validator==2.1.0
-pyjwt==2.8.0
-cryptography<=41.0.8
-typing-extensions==4.8.0
 pydantic==2.5.0
+pydantic-settings==2.1.0
+typing-extensions==4.8.0
+
+# File processing
+python-multipart==0.0.6
+openpyxl<=3.1.5
+
+# Image processing
+Pillow==10.0.1
+
+# Additional Streamlit components
+streamlit-aggrid==0.3.4
+streamlit-elements==0.1.0
+streamlit-plotly-events==0.0.6
+streamlit-lottie==0.0.5
+
+# Charts and visualization
+matplotlib==3.7.2
+seaborn==0.12.2
+
+# Progress bars and UI enhancements
+tqdm==4.66.1
+rich==13.6.0
+
+# Async support
+aiofiles==23.2.1
+anyio<=4.2.0
+
+# FastAPI integration (for models and compatibility)
 fastapi==0.104.1
 uvicorn==0.24.0
-python-multipart==0.0.6
+starlette==0.27.0
 jinja2==3.1.2
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
 itsdangerous==2.1.2
-aiohttp==3.9.1
-httpx==0.25.2
-openpyxl<=3.1.5
+
+# Database integration
 sqlalchemy==2.0.23
 alembic==1.13.1
 psycopg2-binary==2.9.9
-bcrypt==4.1.2
-anyio<=4.2.0
-starlette==0.27.0
+
+# Payment integration
 instamojo-wrapper==1.2.0
+
+# Translation and NLP (Lightweight versions)
+transformers==4.35.0
+torch==2.0.1
+sentencepiece==0.1.99
+sacremoses==0.0.53
+
+# Performance and caching
+cachetools==5.3.1
+
+# Data validation and serialization
+marshmallow==3.20.1
+jsonschema==4.19.1
+
+# Email validation
+email-validator==2.1.0
+
+# Monitoring and logging
+loguru==0.7.2
+
+# Additional utilities
+python-slugify==8.0.1
+validators==0.22.0
+
+# Additional data formats
+pyyaml==6.0.1
+toml==0.10.2
+
+# Performance monitoring
+psutil==5.9.5
 
