--- a/requirements.txt
+++ b/requirements.txt
@@ -118,3 +118,7 @@ toml==0.10.2
 # Performance monitoring
 psutil==5.9.5
 streamlit-extras<=0.4.2
+streamlit-card<=1.0.2
+streamlit-avatar<=0.1.3
+streamlit-notify<=0.3.1
+st-annotated-text<=4.0.2
