--- a/requirements.txt
+++ b/requirements.txt
@@ -1,124 +1,57 @@
-# HAVEN Crowdfunding Platform - Merged Frontend Requirements
-# Compatible with Python 3.11 and Render deployment
-# Streamlit frontend with complete functionality
-
-# Core Streamlit and web framework
+# Core Streamlit & UI Components
 streamlit==1.28.1
-streamlit-authenticator==0.3.2
+streamlit-authenticator==0.3.2 # Note: Ensure compatibility with latest Streamlit
 streamlit-option-menu==0.3.13
+streamlit-aggrid==0.3.4
+streamlit-elements==0.1.0
+streamlit-plotly-events==0.0.6
+streamlit-lottie==0.0.5
+Pillow==10.0.1
+rich==13.6.0
 
-# HTTP requests and API integration
+# HTTP/API Communication
 requests==2.31.0
 httpx==0.25.2
 aiohttp==3.9.1
+aiofiles==23.2.1
 
-# Data processing and visualization
+# Data Handling & Plotting
 pandas==2.0.3
 numpy==1.24.4
 plotly==5.17.0
 altair==5.1.0
+matplotlib==3.7.2
+seaborn==0.12.2
 
-# Authentication and security
+# OAuth, JWT, & Security
+google-auth-oauthlib==1.1.0
+google-auth==2.23.0
+oauthlib==3.2.2
 PyJWT==2.8.0
 cryptography<=41.0.8
 python-jose[cryptography]==3.3.0
 bcrypt==4.1.2
 passlib[bcrypt]==1.7.4
+email-validator==2.1.0
 
-# OAuth integration
-google-auth-oauthlib==1.1.0
-google-auth==2.23.0
-oauthlib==3.2.2
-
-# Text processing and NLP
-nltk==3.8.1
+# Text Processing (if any is done on frontend)
+nltk==3.8.1 # Note: NLTK data must be pre-downloaded during build [cite: 356]
 textstat==0.7.3
 langdetect==1.0.9
 textblob==0.17.1
 beautifulsoup4==4.12.2
 lxml==4.9.3
 
-# Date and time handling
-python-dateutil==2.8.2
-pytz==2023.3
-
-# Environment and configuration
+# Configuration & Utilities
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 typing-extensions==4.8.0
-
-# File processing
-python-multipart==0.0.6
-openpyxl<=3.1.5
-
-# Image processing
-Pillow==10.0.1
-
-# Additional Streamlit components
-streamlit-aggrid==0.3.4
-streamlit-elements==0.1.0
-streamlit-plotly-events==0.0.6
-streamlit-lottie==0.0.5
-
-# Charts and visualization
-matplotlib==3.7.2
-seaborn==0.12.2
-
-# Progress bars and UI enhancements
+python-dateutil==2.8.2
+pytz==2023.3
 tqdm==4.66.1
-rich==13.6.0
-
-# Async support
-aiofiles==23.2.1
 anyio<=4.2.0
-
-# FastAPI integration (for models and compatibility)
-fastapi==0.104.1
-uvicorn==0.24.0
-starlette==0.27.0
-jinja2==3.1.2
-itsdangerous==2.1.2
-
-# Database integration
-sqlalchemy==2.0.23
-alembic==1.13.1
-psycopg2-binary==2.9.9
-
-# Payment integration
-instamojo-wrapper==1.2.0
-
-# Translation and NLP (Lightweight versions)
-transformers==4.35.0
-torch==2.0.1
-sentencepiece==0.1.99
-sacremoses==0.0.53
-
-# Performance and caching
 cachetools==5.3.1
-
-# Data validation and serialization
-marshmallow==3.20.1
 jsonschema==4.19.1
-
-# Email validation
-email-validator==2.1.0
-
-# Monitoring and logging
 loguru==0.7.2
-
-# Additional utilities
 python-slugify==8.0.1
-validators==0.22.0
-
-# Additional data formats
-pyyaml==6.0.1
-toml==0.10.2
-
-# Performance monitoring
-psutil==5.9.5
-streamlit-extras<=0.4.2
-streamlit-card<=1.0.2
-streamlit-avatar<=0.1.3
-streamlit-notify<=0.3.1
-st-annotated-text<=4.0.2
