--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Core Streamlit & UI Components
 streamlit==1.28.1
-streamlit-authenticator==0.3.2 # Note: Ensure compatibility with latest Streamlit
+streamlit-authenticator==0.3.2
 streamlit-option-menu==0.3.13
+streamlit-extras  # FIXED: Added the missing dependency
 streamlit-aggrid==0.3.4
 streamlit-elements==0.1.0
 streamlit-plotly-events==0.0.6
@@ -13,7 +14,6 @@ rich==13.6.0
 requests==2.31.0
 httpx==0.25.2
 aiohttp==3.9.1
-aiofiles==23.2.1
 
 # Data Handling & Plotting
 pandas==2.0.3
@@ -28,30 +28,15 @@ google-auth-oauthlib==1.1.0
 google-auth==2.23.0
 oauthlib==3.2.2
 PyJWT==2.8.0
-cryptography<=41.0.8
 python-jose[cryptography]==3.3.0
-bcrypt==4.1.2
-passlib[bcrypt]==1.7.4
-email-validator==2.1.0
 
-# Text Processing (if any is done on frontend)
-nltk==3.8.1 # Note: NLTK data must be pre-downloaded during build [cite: 356]
+# Text Processing (if needed on frontend)
+nltk==3.8.1
 textstat==0.7.3
-langdetect==1.0.9
-textblob==0.17.1
-beautifulsoup4==4.12.2
-lxml==4.9.3
 
 # Configuration & Utilities
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 typing-extensions==4.8.0
-python-dateutil==2.8.2
-pytz==2023.3
-tqdm==4.66.1
-anyio<=4.2.0
 cachetools==5.3.1
-jsonschema==4.19.1
-loguru==0.7.2
-python-slugify==8.0.1
