--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@
 streamlit==1.28.1
 streamlit-authenticator==0.3.2
 streamlit-option-menu==0.3.13
-streamlit-extras  # FIXED: Added the missing dependency
+streamlit-extras
+st-theme# FIXED: Added the missing dependency
 streamlit-aggrid==0.3.4
 streamlit-elements==0.1.0
 streamlit-plotly-events==0.0.6
