--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ streamlit==1.28.1
 streamlit-authenticator==0.3.2
 streamlit-option-menu==0.3.13
 streamlit-extras
-st-theme# FIXED: Added the missing dependency
+st-theme
 streamlit-aggrid==0.3.4
 streamlit-elements==0.1.0
 streamlit-plotly-events==0.0.6
