--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,17 @@ streamlit==1.28.1
 streamlit-authenticator==0.3.2
 streamlit-option-menu==0.3.13
 streamlit-extras
+# st-theme has been removed
 streamlit-aggrid==0.3.4
 streamlit-elements==0.1.0
 streamlit-plotly-events==0.0.6
 streamlit-lottie==0.0.5
 Pillow==10.0.1
 rich==13.6.0
+streamlit-card
+streamlit-avatar
+streamlit-notify
+annotated-text
 
 # HTTP/API Communication
 requests==2.31.0
