--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ streamlit==1.28.1
 streamlit-authenticator==0.3.2
 streamlit-option-menu==0.3.13
 streamlit-extras
-# st-theme has been removed
 streamlit-aggrid==0.3.4
 streamlit-elements==0.1.0
 streamlit-plotly-events==0.0.6
@@ -13,7 +12,7 @@ rich==13.6.0
 streamlit-card
 streamlit-avatar
 streamlit-notify
-st-annotated-text # FIXED: Corrected package name
+st-annotated-text
 
 # HTTP/API Communication
 requests==2.31.0
