--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,14 @@
-# Core Streamlit & UI Components
-streamlit==1.28.1
-streamlit-authenticator==0.3.2
-streamlit-option-menu==0.3.13
-streamlit-extras
-streamlit-aggrid==0.3.4
-streamlit-elements==0.1.0
-streamlit-plotly-events==0.0.6
-streamlit-lottie==0.0.5
-Pillow==10.0.1
-rich==13.6.0
-streamlit-card
-streamlit-avatar
-streamlit-notify
-st-annotated-text
+# Core Streamlit framework and router
+streamlit<=1.47.1
+streamlit-option-menu<=0.4.0
 
-# HTTP/API Communication
-requests==2.31.0
-httpx==0.25.2
-aiohttp==3.9.1
+# UI component libraries from your code
+streamlit-extras<=0.7.5
+streamlit-card<=1.0.2
+streamlit-avatar<=0.1.3
+streamlit-notify<=0.3.1
+st-annotated-text<=4.0.2
+streamlit-aggrid<=1.1.7
 
-# Data Handling & Plotting
-pandas==2.0.3
-numpy==1.24.4
-plotly==5.17.0
-altair==5.1.0
-matplotlib==3.7.2
-seaborn==0.12.2
-
-# OAuth, JWT, & Security
-google-auth-oauthlib==1.1.0
-google-auth==2.23.0
-oauthlib==3.2.2
-PyJWT==2.8.0
-python-jose[cryptography]==3.3.0
-
-# Text Processing (if needed on frontend)
-nltk==3.8.1
-textstat==0.7.3
-
-# Configuration & Utilities
-python-dotenv==1.0.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-typing-extensions==4.8.0
-cachetools==5.3.1
+# For making API calls to the backend
+requests<=2.32.4
